<resources>

    <!-- Build number must be changed every build for support & feedback accuracy -->
    <string name="build_number">MDC Mobile Beta Build 6</string>
    
    <string name="app_name">MDC Mobile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">MDC Mobile</string>
    <string name="mdc">Miami Dade College</string>
    <string name="select_to_call">Select To Call</string>
    <string name="mdc_mobiletechclub">MDC Mobile Technology Club</string>
    <string name="entec">ENTEC</string>
    <string name="contact_us">Contact Us</string>
    <string name="information">Information</string>
    
    <!-- Campus Names -->
    <string name="hileah">Hialeah Campus</string>
    <string name="homestead">Homestead Campus</string>
    <string name="interamerican">Interamerican Campus</string>
    <string name="kendall">Kendall Campus</string>
    <string name="medical">Medical Campus</string>
    <string name="north">North Campus</string>
    <string name="west">West Campus</string>
    <string name="wolfson">Wolfson Campus</string>
    
    <!-- Campus layout buttons -->    
    <string name="my_mdc">MY MDC</string>
    <string name="email">Email</string>
    <string name="events">Events</string>
    <string name="maps">Maps</string>
    <string name="angel">Angel</string>
    <string name="news">News</string>
    <string name="library">Library</string>
    <string name="courses">Courses</string>
    <string name="saftey">Safety</string>
    <string name="directory">Directory</string>
    <string name="home">Home</string>
        
    
    <!-- Contributors -->
    <string name="jack_lusby">Professor Jack Lusby</string>
    <string name="jesus_aguilar">Jesus Aguilar</string>
	<string name="edel_benavides">Edel Benavides</string>
    <string name="joel_cruz">Joel Cruz</string>
    <string name="frank_gonzalez">Frank Gonzalez</string>
    <string name="joeseph_george">Joseph George</string>
    <string name="patrick_helmus">Patrick Helmus</string>
    <string name="jean_hyppolite">Jean Hyppolite</string>
    <string name="darian_mendez">Darian Mendez</string>
    <string name="luis_portillo">Luis Portillo</string>
    <string name="jahaziel_rodriguez">Jahaziel Rodriguez</string>
    <string name="mario_thomas">Mario Thomas</string>
    <string name="sean_paul_williams">Sean Paul Williams</string>
    


    
    

</resources>