<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android">
    
<TableRow>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnMyMdc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/my_mdc"
                android:src="@drawable/icon_mymdc" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/email"
                android:src="@drawable/icon_email" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/events"
                android:src="@drawable/icon_events" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/maps"
                android:src="@drawable/icon_maps" >

            </ImageView>
        </FrameLayout>
    </TableRow>
    <TableRow>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">
            <ImageView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:src="@drawable/icon_angel" 
                android:id="@+id/btnAngel"
                android:contentDescription="@string/angel"
                android:layout_gravity="center_horizontal|center_vertical">
            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/news"
                android:src="@drawable/icon_news" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnLibrary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/library"
                android:src="@drawable/icon_library" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/courses"
                android:src="@drawable/icon_courses" >

            </ImageView>
        </FrameLayout>
    </TableRow>
    <TableRow>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnPublicSafety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/saftey"
                android:src="@drawable/icon_safety" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnPhoneDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/directory"
                android:src="@drawable/icon_directory" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/home"
                android:src="@drawable/icon_home" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1" />
        </TableRow>
        
</TableLayout>