<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#4aabf5"
    android:stretchColumns="1" >

    <TableRow>
        <!-- Header -->
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgMdcLogo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/mdc"
                android:src="@drawable/mdc_logo" >

            </ImageView>

            <ImageView
                android:id="@+id/imgInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/information"
                android:src="@drawable/information" />

        </FrameLayout>
    </TableRow>
    <TableRow>
        <!-- Row 1 -->
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgHialeah"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/hileah"
                android:src="@drawable/campus_hialeah_icon" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgHomestead"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/homestead"
                android:src="@drawable/campus_homestead_icon" >

            </ImageView>
        </FrameLayout>
       
     </TableRow>
     <TableRow>
        <!-- Row 2 -->
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgInteramerican"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/interamerican"
                android:src="@drawable/campus_interamerican_icon" >

            </ImageView>
        </FrameLayout>
         <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgKendall"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/kendall"
                android:src="@drawable/campus_kendall_icon" >

            </ImageView>
         </FrameLayout>
    </TableRow>
    <TableRow>
        <!-- Row 3 -->        
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgMedical"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/medical"
                android:src="@drawable/campus_medical_icon" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgNorth"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/north"
                android:src="@drawable/campus_north_icon" >

            </ImageView>
        </FrameLayout>
    </TableRow>
    <TableRow>
        <!-- Row 4 -->        
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgWest"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/west"
                android:src="@drawable/campus_west_icon" >

            </ImageView>
        </FrameLayout>
        <FrameLayout 
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgWolfson"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/wolfson"
                android:src="@drawable/campus_wolfson_icon" >

            </ImageView>
        </FrameLayout>
    </TableRow>
    
</TableLayout>